unpackaged/main/default/objects/OpportunityForecastSnapshot__c/OpportunityForecastSnapshot__c.object-meta.xml
<CustomObject>
    <label>Opportunity Forecast Snapshot</label>
    <nameField>
        <displayFormat>FCST-SNAP-{0000}-{MM}-{YYYY}</displayFormat>
        <label>Opportunity Forecast Snapshot</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Forecast Snapshots</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>