unpackaged/main/default/objects/OpportunityForecastSnapshot__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>