unpackaged/main/default/objects/OpportunityForecastSnapshot__c/fields/ForecastCategory__c.field-meta.xml
<CustomField>
    <fullName>ForecastCategory__c</fullName>
    <label>Forecast Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0% Disengaged</fullName>
            </value>
            <value>
                <fullName>10-40% Pipeline</fullName>
            </value>
            <value>
                <fullName>50-60% Best Case</fullName>
            </value>
            <value>
                <fullName>70-90% Committed</fullName>
            </value>
            <value>
                <fullName>100% Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>