unpackaged/main/default/objects/OpportunityForecastSnapshot__c/fields/No_of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>No_of_Opportunities__c</fullName>
    <label>No. of Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>