unpackaged/main/default/objects/OpportunityForecastSnapshot__c/fields/SalesPerson__c.field-meta.xml
<CustomField>
    <fullName>SalesPerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Person</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Opportunity Forecast Snapshots</relationshipLabel>
    <relationshipName>OpportunityForecastSnapshots</relationshipName>
    <type>Lookup</type>
</CustomField>